# lupe-catalog-backend

./: .env  .env.docker  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  local_setup.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  eea63c82ae80_spec_002_product.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  admin_user.py  base.py  category.py  product.py  product_history.py  product_image.py  store_settings.py
app/routers/: admin.py  public.py
app/schemas/: category.py  common.py  product.py  settings.py
app/services/: auth_service.py  category_service.py  image_service.py  product_service.py  settings_service.py  storage_service.py
app/utils/: security.py  slugify.py
scripts/: seed.py  seed_products.py
specs/: 001_LUPE_Image_Manager.md  002_LUPE_Product_Enhancements.md  LUPE_Backend_Spec.md
tests/: conftest.py  test_auth.py  test_categories.py  test_images.py  test_products.py  test_settings.py
